CAMEL-19079: camel-language - Should init expression. Add resultType as configuration option.